# bevy_lod

./: Cargo.toml  README.md
assets/models/: lod_test.blend  lod_test.blend1  lod_test.glb
assets/models/forest_ground_oak_pine_vol2/: ground_l1_l2.glb
assets/models/grass/: grass.glb
assets/models/tree/: TREE.fbx  tree.glb
assets/models/wood/source/: Wood1.glb
examples/: balls_lod_mesh_with_wireframes.rs  balls_lod_mesh_with_wireframes_resources_distance.rs  balls_lod_mesh_without_wireframes.rs  cam.rs  forest_scene.rs  planes_lod_material.rs
src/: lib.rs  lod_distance.rs  lod_mesh.rs  lod_pbr.rs  lod_settings.rs
