[package]
name = "bevy_lod"
version = "0.3.1"
edition = "2021"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

# LLD Linker
[target.x86_64-unknown-linux-gnu]
linker = "clang"
rustflags = ["-C", "link-arg=-fuse-ld=lld"]

[dependencies.bevy]
version = "^0.14"
default-features = false
features = [
    # Default Deatures

#    "android_shared_stdcxx", # Enable using a shared stdlib for cxx on Android
#    "animation", # Enable animation support, and glTF animation loading
#    "bevy_animation", # Provides animation functionality
    "bevy_asset", # Provides asset functionality
#    "bevy_audio", # Provides audio functionality
    "bevy_color", # Provides shared color types and operations
    "bevy_core_pipeline", # Provides cameras and other basic render pipeline features
#    "bevy_gilrs", # Adds gamepad support
    "bevy_gizmos", # Adds support for rendering gizmos
    "bevy_gltf", # glTF support
    "bevy_pbr", # Adds PBR rendering
#    "bevy_picking", # Provides picking functionality
    "bevy_render", # Provides rendering functionality
    "bevy_scene", # Provides scene functionality
#    "bevy_sprite", # Provides sprite functionality
#    "bevy_state", # Enable built in global state machines
#    "bevy_text", # Provides text functionality
#    "bevy_ui", # A custom ECS-driven UI framework
    "bevy_winit", # winit window and input backend
#    "default_font", # Include a default font, containing only ASCII characters, at the cost of a 20kB binary size increase
#    "hdr", # HDR image format support
#    "ktx2", # KTX2 compressed texture support
    "multi_threaded", # Enables multithreaded parallelism in the engine. Disabling it forces all engine tasks to run on a single thread.
    "png", # PNG image format support
#    "smaa_luts", # Include SMAA Look Up Tables KTX2 Files
    "sysinfo_plugin", # Enables system information diagnostic plugin
    "tonemapping_luts", # Include tonemapping Look Up Tables KTX2 files. If everything is pink, you need to enable this feature or change the Tonemapping method on your Camera2dBundle or Camera3dBundle.
#    "vorbis", # OGG/VORBIS audio format support
#    "webgl2", # Enable some limitations to be able to use WebGL2. Please refer to the WebGL2 and WebGPU section of the examples README for more information on how to run Wasm builds with WebGPU.
    "x11", # X11 display server support
#    "zstd" # Add Zstandard compression support


    # Optional Features
    "jpeg",
#    "meshlet", # lmao
#    "meshlet_processor"
]

[dependencies]
rand = "0.8.4"
